# game-of-life

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  config.hpp  export.hpp  premake4.lua  use_wxwidgets.lua
2D/: App.cpp  App.hpp  Background.hpp  Canvas.cpp  Canvas.hpp  Cell.cpp  CellField.cpp  CellField.hpp  Drawable.hpp  MainFrame.cpp  MainFrame.hpp  main.cpp  wxSFMLCanvas.cpp
2D/wx/: setup.h
3D/: App.cpp  main.cpp
app2d/: CMakeLists.txt
app2d/include/app2d/: App.hpp  Background.hpp  Canvas.hpp  CellField.hpp  MainFrame.hpp  wxSFMLCanvas.hpp
app2d/src/: App.cpp  Background.cpp  Canvas.cpp  CellField.cpp  Drawable.cpp  LoopTimer.cpp  MainFrame.cpp  main.cpp  wxSFMLCanvas.cpp
app3d/include/app3d/: App.hpp
app3d/src/: App.cpp
game-of-life/: App.cpp  App.hpp  Background.cpp  Background.hpp  Cell.hpp  CellField.cpp  CellField.hpp  SignedArray2D.hpp  SignedArray2D.hxx
game-of-life-tests/: TestSignedArray2D.cpp
gol/: .gitignore  CMakeLists.txt
gol/include/gol/: Config.hpp.in  Export.hpp  GenericCellField.hpp  GenericCellField.hxx  Rule.hpp  Vector2.hpp  Vector2.hxx
gol/src/: Rule.cpp
libgol/: GOLCell.hpp  GOLCell.hxx  GOLCellField2D.cpp  GOLCellField2D.hpp  GOLConfig.hpp  GOLExport.hpp  GOLGenericCellField.hpp  GOLGenericCellField.hxx  GOLRule.cpp  GOLRule.hpp  GOLSortedList.hpp  GOLSortedList.hxx  GOLVector2.hpp  GOLVector2.hxx  GOLVector3.hpp  GOLVector3.hxx
tests/: TestGOLCell.cpp  TestGOLCellField2D.cpp  TestGOLGenericCellField.cpp  TestGOLRule.cpp  TestGOLSortedList.cpp  TestGOLVector2.cpp  TestGOLVector3.cpp
tests/src/: TestGOLCell.cpp  TestGOLVector3.cpp
